--- a/package.json
+++ b/package.json
@@ -2,16 +2,57 @@
   "name": "userapi",
   "version": "1.0.0",
   "description": "API for USERS in Master project",
-  "main": "server.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start": "tsc && nodemon dist/index.js",
+    "build": "tsc && eslint src --ext .ts --ext .js",
+    "dev": "nodemon src/app.ts",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier": "prettier --write \"src/**/*.ts\""
   },
   "author": "Paweł Kapusta",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.2.2",
+    "@types/google-libphonenumber": "^7.4.23",
+    "@types/node": "^18.14.0",
+    "axios": "^1.3.3",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "libphonenumber-js": "^1.10.20",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
+    "@types/eslint": "^8.21.1",
+    "@types/express": "^4.17.17",
+    "@types/helmet": "^4.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/morgan": "^1.9.4",
+    "@types/mysql": "^2.15.21",
+    "@types/nodemon": "^1.19.2",
+    "@types/prettier": "^2.7.2",
+    "@types/sequelize": "^4.28.14",
+    "@types/typescript": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tsconfig": "^0.0.1"
   }
 }
