--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   "author": "Paweł Kapusta",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/google-libphonenumber": "^7.4.23",
     "@types/node": "^18.14.0",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.3.3",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -30,7 +33,8 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
