--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "outDir": "dist",
     "sourceMap": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
