--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
